<resources>
    <string name="app_name">Patronus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Patronus</string>
    <string name="nav_header_subtitle">With AI against Dementia</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_diagnostics">Diagnostics</string>
    <string name="menu_data_sources">Data Sources</string>
    <string name="menu_interventions">Interventions</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="tap_to_send">Send</string>
    <string name="open_app_open">Open App</string>
    <string name="open_app_already_open">App already open</string>
    <string name="send_message_display">Send message</string>
    <string name="hello_world">Hello World</string>
    <string name="short_string">Short String</string>
    <string name="medium_string">Medium String</string>
    <string name="long_string">Long String</string>
    <string name="absurd_string">Absurd String</string>
    <string name="array">Array of Values</string>
    <string name="dictionary">Dictionary of Values</string>
    <string name="complex">Complex Data Type</string>
    <string name="missing_widget">Missing Comm Widget</string>
    <string name="missing_widget_message">The Comm Widget used with this application is not installed on your ConnectIQ device.   Please install the widget and try again.</string>
    <string name="received_message">Received message from device.</string>
    <string name="hello_world_message">Hello World!</string>
    <string name="short_string_message">Hi</string>
    <string name="medium_string_message">Why hello there, good world! This is a medium-length string.</string>
    <string name="long_string_message">Lorem ipsum dolor sit amet, pri ex epicuri luptatum, cum tantas partem fastidii an. Ea quot iudicabit vim, vis copiosae repudiandae at. Pri ut agam animal epicuri, nam cu omnis latine voluptatibus. Est dicat viderer ei, at possit sapientem ullamcorper vix, et eum virtute dolorum intellegat. No summo animal forensibus sit, singulis dissentiunt vix at, id congue theophrastus cum. Eam ex semper molestiae, te porro labore mel.</string>
    <string name="absurd_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at ultricies enim. Quisque venenatis sed nisl a molestie. Sed iaculis commodo erat nec dignissim. Aenean vitae fermentum diam, fringilla vehicula orci. Donec quis lorem velit. Vivamus sit amet mauris volutpat, faucibus tellus quis, fringilla ligula. Phasellus tempor auctor malesuada. Duis tempor id dolor et sagittis. Vivamus sem magna, condimentum et lacus at, semper pretium nunc. Phasellus volutpat, metus eget egestas dictum, massa mauris dictum justo, quis viverra neque felis ut augue. In hendrerit eros vitae dui laoreet sodales. Praesent vitae odio vitae arcu luctus imperdiet. Phasellus venenatis ex in nunc finibus, ac elementum sapien aliquam. Etiam pulvinar tincidunt mauris non faucibus. Vestibulum ut enim sit amet metus sodales porttitor. Proin ut venenatis orci, nec volutpat neque. Integer pretium risus vel nibh fringilla, vel egestas lectus semper. Integer eleifend mauris id odio blandit ornare. In nec dui aliquam, pulvinar massa ut, mollis mi. Nunc nec mauris est. Nunc efficitur eget ligula et dapibus. Vestibulum varius urna quam, eget tristique magna fringilla id. Quisque blandit dolor mattis metus interdum lacinia. In in accumsan ligula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris nunc nunc, interdum nec tempus ut, facilisis vel eros. Curabitur vitae tellus nec elit semper faucibus. Donec sed diam facilisis, porttitor urna vitae, interdum sapien. Nunc nec eros at leo sollicitudin fermentum at et orci. Proin erat lorem, tincidunt id nunc vel, egestas sodales erat. Praesent sem augue, aliquam vulputate cursus quis, dapibus quis nisl. Aenean tincidunt sapien eu tincidunt rutrum. Aenean ultricies auctor magna eget tempor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus id massa diam. Etiam at ipsum id nisi finibus ultrices gravida eu est. Fusce at velit a urna pulvinar mollis sit amet vel quam. Vivamus mi ante, tempus id lacus sit amet, laoreet condimentum lectus. Nulla facilisi. Morbi eget nisl non nibh maximus maximus a a erat. Nulla nec pellentesque ex. Maecenas malesuada ante ac magna vestibulum, id tincidunt nisi vestibulum. Vestibulum at magna eu dolor finibus cursus fringilla a elit. Etiam a nunc in lacus maximus viverra. Nulla bibendum, tortor ac ultrices pulvinar, magna mi tristique tellus, sed mattis magna mauris et arcu. Donec consequat tortor et ligula condimentum dignissim. Aliquam at massa et massa blandit elementum nec sed nunc. Fusce tempor quam tellus, eu suscipit elit consequat et. Cras quis massa at nulla aliquet tristique eget sit amet eros. In pulvinar massa et orci rhoncus lacinia. Quisque semper feugiat erat, sit amet facilisis justo feugiat a. Nullam mattis lorem in nisl maximus, sed suscipit enim tempus. Nam sed aliquam elit, quis pharetra mi. Aliquam erat volutpat. Cras dapibus vel sapien non aliquet. Etiam lacinia tempus euismod. Donec ultricies est non ante eleifend, et blandit lorem consequat. Nulla tincidunt massa et tellus ornare, eu ornare nisl auctor. Nam ac posuere ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque porttitor, arcu et pharetra porta, tellus ipsum vestibulum ex, ac dictum risus mauris a massa. Phasellus in quam dui. Vestibulum et ligula at justo scelerisque posuere. Cras pretium ac nisi vel tincidunt. Suspendisse aliquam, tellus ac consectetur dapibus, turpis sapien dictum odio, sit amet fermentum ex elit at diam. In hac habitasse platea dictumst. Ut bibendum pharetra aliquet. Aenean condimentum lacus ligula, at auctor sem semper at. Aenean sollicitudin neque augue, at tempor est commodo eu. Mauris massa tortor, mollis posuere nisi vitae, efficitur volutpat odio. Phasellus faucibus pellentesque augue, ut vulputate augue condimentum vel. Aliquam eu gravida dui, sed vestibulum justo. Curabitur nec mauris augue. Sed eu lobortis magna. Suspendisse bibendum est hendrerit hendrerit dignissim. Sed vel nisi magna. Mauris ultricies tincidunt porttitor. Praesent congue diam turpis, eu feugiat neque sollicitudin sed. Nullam molestie est posuere odio luctus volutpat. Nam lacinia nisl vel ex sodales posuere. Curabitur quis aliquam nulla. Ut dapibus sem arcu, a posuere dolor hendrerit eleifend. Curabitur ornare eu lorem eget egestas. Vivamus venenatis porta ipsum, vitae efficitur felis porttitor ut. Donec lobortis ornare suscipit. Etiam eget dolor ut felis condimentum elementum. Duis pretium eget nunc a tempor. Pellentesque vel dui leo. Ut condimentum risus eu velit sollicitudin semper. Nullam pellentesque ut turpis vitae sollicitudin. Duis blandit feugiat odio sit amet fermentum. Quisque ultrices dapibus metus, sed laoreet mi blandit ut. Sed at dui vitae turpis suscipit varius et eu velit. Donec mattis augue placerat pharetra vehicula. Nam convallis mauris ut turpis ultricies, volutpat imperdiet eros viverra. Etiam nisl est, accumsan at scelerisque sit amet, elementum quis ex. Curabitur ac sapien lacus. Phasellus et eleifend nisl. Donec eu eleifend felis, id ultrices nibh. In hendrerit arcu quis justo blandit varius sed eget libero. Nulla egestas magna vehicula, pellentesque nibh quis, congue tortor. Ut sed hendrerit nisl, id posuere lorem. Suspendisse sodales est id mauris pretium porttitor. Integer risus magna, lacinia nec lorem eu, pulvinar mattis turpis. Proin aliquam turpis velit, quis placerat felis sollicitudin at. Fusce condimentum quam eget lorem interdum, et ornare urna fermentum. Quisque elit arcu, laoreet tempus leo id, blandit vehicula mauris. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam mauris mauris, sollicitudin id tortor vitae, condimentum suscipit lectus. Morbi congue sit amet risus quis egestas. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent pellentesque metus eget quam pulvinar mollis. In ut neque risus. Curabitur massa erat, dapibus a lacus eget, faucibus rhoncus risus. Aenean imperdiet dolor quis commodo pulvinar. Vivamus porttitor diam fermentum interdum posuere.</string>
    <string name="settings_patient_id_heading">Patient</string>
    <string name="settings_location_id_heading">Location</string>
    <string name="settings_mute_bool">Notifications</string>
    <string name="settings_mute_bool_pulse">Notify Relatives</string>
    <string name="settings_mute_bool_breath">Notify Physicians</string>
    <string name="settings_mute_bool_true">ON</string>
    <string name="settings_mute_bool_false">OFF</string>
    <string name="alert_error_title">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="error_failed_to_connect_to_device" formatted="false">Failed to connect to device {%s}Reason: %s</string>
    <string name="scan_start">Start</string>
    <string name="scan_stop">Stop</string>
    <string name="companion_license" translatable="false">EoACSp70Kr1E0JbToAktDmtQlGo0hjpEmNUK8WJeGuMy/WIOPyqpILTaDr1gGlNCeQWKBOJrFaWwRUUq7IiLwxnFcoEIpNONHOCa56OQmprrG9PjW326Tx8wKtXzb4MmS3xHY+vnEDACZSmhC7tf7ID0lQvLziL8LtPk604aPPhsssUj2gyF84gLCZcLCeL36J6XDTz62psuNvlG/s5mIJP/zzIEs5rd0d6CGvMcMl/EbvKihuzhybPmHdQjq3ciksY5co2xEE1FfOUD/AZYRScpHz9C/5SLq9H0y/5vqbugdU5NzzHJyyJZZ+UJNnowDIoSH0wtw43c2d/7aPj9prAL6hiAmJrJwy8iCwECAwQFBgcICQoLKggBAgMEBQcICQ==
</string>
    <string name="config_female">Female</string>
    <string name="config_male">Male</string>
    <string name="config_gender">Gender</string>
    <string name="config_height">Height (m)</string>
    <string name="config_weight">Weight (kg)</string>
    <string name="config_age">Age (y)</string>
    <string name="config_menu_done">Done</string>
    <string name="config_menu_disable_archive">Disable fit archive</string>
    <string name="config_menu_enable_archive">Enable fit archive</string>
    <string name="config_empty_field_error">All fields should be filled with positive values.</string>
    <string name="pair_success_button">Done</string>
    <string name="pair_screen_device_disconnected">Device %s disconnected.</string>
    <string name="pair_screen_device_connection_failed">Device %s failed to connect.</string>
    <string name="pair_screen_device_pairing_failed">Device failed to pair.</string>
    <string name="action_bar_connected_devs">Connected devices</string>
    <string name="action_bar_scanning">Scanning</string>
    <string name="action_bar_config">Configuration</string>
    <string name="hr_description">Heart Rate Chart</string>
    <string name="stress_description">Stress Level Chart</string>
    <string name="steps_description">Steps Chart</string>
    <string name="calories_description">Calories Chart</string>
    <string name="floors_description">Floors Chart</string>
    <string name="intensity_minutes_description">Intensity Minutes Chart</string>
    <string name="hrv_description">Heart Rate Variability Chart</string>
    <string name="accelerometer_description">Accelerometer Chart</string>
    <string name="spo2_description">SPO2 Chart</string>
    <string name="respiration_description">Respiration Chart</string>
    <string name="body_battery_description">Body Battery Chart</string>
</resources>