<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hackzurich.ws03.app08.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.hackzurich.ws03.app08.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_diagnostics"
        android:name="com.hackzurich.ws03.app08.ui.diagnostics.DiagnosticsFragment"
        android:label="@string/menu_diagnostics"
        tools:layout="@layout/fragment_diagnostics" />

    <fragment
        android:id="@+id/nav_data_sources"
        android:name="com.hackzurich.ws03.app08.ui.datasources.DataSourcesFragment"
        android:label="@string/menu_data_sources"
        tools:layout="@layout/fragment_datasources" />

    <fragment
        android:id="@+id/nav_interventions"
        android:name="com.hackzurich.ws03.app08.ui.interventions.InterventionsFragment"
        android:label="@string/menu_interventions"
        tools:layout="@layout/fragment_interventions" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.hackzurich.ws03.app08.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" />


    <fragment
        android:id="@+id/nav_settings"
        android:name="com.hackzurich.ws03.app08.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <!--  <fragment
      android:id="@+id/nav_diagnostics"
      android:name="com.hackzurich.ws03.app08.ui.diagnostics.DiagnosticsFragment"
      android:label="@string/menu_slideshow"
      tools:layout="@layout/fragment_datasources" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.hackzurich.ws03.app08.ui.interventions.InterventionsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_datasources" /> -->
</navigation>