<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">


    <TextView
        android:id="@+id/textViewAlertGeneral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/settings_mute_bool"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Switch
        android:id="@+id/settings_mute_bool_breath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:showText="true"
        android:switchMinWidth="24sp"
        android:text="@string/settings_mute_bool_breath"
        android:textColor="@android:color/black"
        android:textColorLink="#FF303F9F"
        android:textOff="@string/settings_mute_bool_false"
        android:textOn="@string/settings_mute_bool_true"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/settings_mute_bool_pulse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_mute_bool_pulse" />


    <Switch
        android:id="@+id/settings_mute_bool_pulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:showText="true"
        android:switchMinWidth="24sp"
        android:text="@string/settings_mute_bool_pulse"
        android:textColor="@android:color/black"
        android:textColorLink="#FF303F9F"
        android:textCursorDrawable="@android:color/black"
        android:textOff="@string/settings_mute_bool_false"
        android:textOn="@string/settings_mute_bool_true"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAlertGeneral" />


    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>