<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.data.DataFragment">


    <TextView
        android:id="@+id/patronus_strength_label_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Patronus Strength: "
        android:textColor="#0093D0"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="InvalidId,MissingConstraints" />

    <TextView
        android:id="@+id/patronus_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="9000"
        android:textColor="#0093D0"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="InvalidId,MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/patronus_strength_label_data"
        tools:context="com.garmin.garminhealth.ui.DataDisplayActivity">

        <!-- Respiration chart -->
        <androidx.cardview.widget.CardView
            android:id="@+id/respiration_chart_card"
            style="@style/ChartCardStyle">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/ChartLayoutStyle">

                <TextView
                    android:id="@+id/respiration_text"
                    style="@style/ChartHeadingStyle"
                    android:text="@string/respiration_description" />

                <com.hackzurich.ws03.app08.ui.charts.RespirationChart
                    android:id="@+id/respiration_chart"
                    style="@style/ChartStyle" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- Steps chart -->
        <androidx.cardview.widget.CardView
            android:id="@+id/steps_chart_card"
            style="@style/ChartCardStyle">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/ChartLayoutStyle">

                <TextView
                    android:id="@+id/steps_text"
                    style="@style/ChartHeadingStyle"
                    android:text="@string/steps_description" />

                <com.hackzurich.ws03.app08.ui.charts.StepsChart
                    android:id="@+id/steps_chart"
                    style="@style/ChartStyle" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Heart rate chart -->
        <androidx.cardview.widget.CardView
            android:id="@+id/hr_chart_card"
            style="@style/ChartCardStyle">

            <LinearLayout style="@style/ChartLayoutStyle">

                <TextView
                    android:id="@+id/hr_text"
                    style="@style/ChartHeadingStyle"
                    android:text="@string/hr_description" />

                <com.hackzurich.ws03.app08.ui.charts.HeartRateChart
                    android:id="@+id/hr_chart"
                    style="@style/ChartStyle" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <!-- Heart rate variability chart -->
        <androidx.cardview.widget.CardView
            android:id="@+id/hrv_chart_card"
            style="@style/ChartCardStyle">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/ChartLayoutStyle">

                <TextView
                    android:id="@+id/hrv_text"
                    style="@style/ChartHeadingStyle"
                    android:text="@string/hrv_description" />

                <com.hackzurich.ws03.app08.ui.charts.HeartRateVariabilityChart
                    android:id="@+id/hrv_chart"
                    style="@style/ChartStyle" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Accelerometer chart -->
        <androidx.cardview.widget.CardView
            android:id="@+id/accelerometer_chart_card"
            style="@style/ChartCardStyle">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/ChartLayoutStyle">

                <TextView
                    android:id="@+id/accelerometer_text"
                    style="@style/ChartHeadingStyle"
                    android:text="@string/accelerometer_description" />

                <com.hackzurich.ws03.app08.ui.charts.AccelerometerChart
                    android:id="@+id/accelerometer_chart"
                    style="@style/ChartStyle" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- Calories chart -->
        <androidx.cardview.widget.CardView
            android:id="@+id/calories_chart_card"
            style="@style/ChartCardStyle">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/ChartLayoutStyle">

                <TextView
                    android:id="@+id/calories_text"
                    style="@style/ChartHeadingStyle"
                    android:text="@string/calories_description" />

                <com.hackzurich.ws03.app08.ui.charts.CaloriesChart
                    android:id="@+id/calories_chart"
                    style="@style/ChartStyle" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Floors chart -->
        <androidx.cardview.widget.CardView
            android:id="@+id/floor_chart_card"
            style="@style/ChartCardStyle">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/ChartLayoutStyle">

                <TextView
                    android:id="@+id/floor_text"
                    style="@style/ChartHeadingStyle"
                    android:text="@string/floors_description" />

                <com.hackzurich.ws03.app08.ui.charts.FloorsChart
                    android:id="@+id/floor_chart"
                    style="@style/ChartStyle" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Intensity minutes chart -->
        <androidx.cardview.widget.CardView
            android:id="@+id/intensity_minutes_chart_card"
            style="@style/ChartCardStyle">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/ChartLayoutStyle">

                <TextView
                    android:id="@+id/intensity_minutes_text"
                    style="@style/ChartHeadingStyle"
                    android:text="@string/intensity_minutes_description" />

                <com.hackzurich.ws03.app08.ui.charts.IntensityMinutesChart
                    android:id="@+id/intensity_minutes_chart"
                    style="@style/ChartStyle" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Intensity minutes chart -->
        <androidx.cardview.widget.CardView
            android:id="@+id/stress_chart_card"
            style="@style/ChartCardStyle">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/ChartLayoutStyle">

                <TextView
                    android:id="@+id/stress_text"
                    style="@style/ChartHeadingStyle"
                    android:text="@string/stress_description" />

                <com.hackzurich.ws03.app08.ui.charts.StressLevelChart
                    android:id="@+id/stress_chart"
                    style="@style/ChartStyle" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- SPO2 chart -->
        <androidx.cardview.widget.CardView
            android:id="@+id/spo2_chart_card"
            style="@style/ChartCardStyle">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/ChartLayoutStyle">

                <TextView
                    android:id="@+id/spo2_text"
                    style="@style/ChartHeadingStyle"
                    android:text="@string/spo2_description" />

                <com.hackzurich.ws03.app08.ui.charts.Spo2Chart
                    android:id="@+id/spo2_chart"
                    style="@style/ChartStyle" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Body Battery chart -->
        <androidx.cardview.widget.CardView
            android:id="@+id/body_battery_chart_card"
            style="@style/ChartCardStyle">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/ChartLayoutStyle">

                <TextView
                    android:id="@+id/body_battery_text"
                    style="@style/ChartHeadingStyle"
                    android:text="@string/body_battery_description" />

                <com.hackzurich.ws03.app08.ui.charts.BodyBatteryChart
                    android:id="@+id/body_battery_chart"
                    style="@style/ChartStyle" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>